compiler/testData/diagnostics/tests/cast/AsErasedError.kt

fun ff(c: MutableCollection<String>) = c <!CAST_NEVER_SUCCEEDS!>as<!> MutableList<Int>
